# rings

./: .gitignore  BUG_REPORT.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  REVIEW.md  TODO.md  build.rings.toml  build.rs  implement-tasks.rings.toml  install.sh  justfile  process-bugs.rings.toml  process-improvements.rings.toml
.claude/agents/: impl-agent-ux.md  impl-architecture.md  impl-cli-framework.md  impl-cross-platform.md  impl-deps.md  impl-docs.md  impl-error-handling.md  impl-filesystem.md  impl-memory.md  impl-performance.md  impl-process-mgmt.md  impl-regex.md  impl-rust.md  impl-serialization.md  impl-testing.md  review-agent-ux.md  review-ai-newcomer.md  review-cli.md  review-data-eng.md  review-devops.md  review-docs.md  review-enterprise.md  review-founder.md  review-gen-z.md  review-oss.md  review-prompt-eng.md  review-reliability.md  review-scripter.md  review-security.md  review-token-opt.md  review-workflow-author.md
.claude/commands/: build.md  feature-election.md  idea.md  plan.md  prioritize.md  process-ideas.md  replan.md  review-ai-newcomer.md  review-cli.md  review-data-eng.md  review-devops.md  review-enterprise.md  review-founder.md  review-gen-z.md  review-oss.md  review-prompt-eng.md  review-reliability.md  review-scripter.md  review-security.md  review-token-opt.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-15-rings-mvp.md  2026-03-16-plan-review-refactor.md
docs/superpowers/specs/: 2026-03-16-autonomous-pipeline-design.md  2026-03-16-plan-review-refactor-design.md
examples/: experiment-loop.rings.toml  multi-phase-audit.rings.toml  readiness-report.rings.toml  review-loop.rings.toml
process-bugs/: fix.md  reproduce.md  triage.md  verify.md
process-improvements/: implement.md  plan.md  select.md  verify.md
queues/: IDEAS.md  PLAN.md  PLAN_DRAFTS.md  READY_TO_IMPLEMENT.md  SELECTED_FEATURES.md  TECH_DEBT.md
ralph/: BUILD_PROMPT.md  REVIEW_PROMPT.md  ralph.sh  usage.jsonl  watch-cost.sh
rings/plan-create/: plan-create.rings.toml
rings/plan-create/prompts/: draft.md  elect.md
rings/plan-create/queue/: PRIORITIZED_FEATURES.md
rings/plan-create/wip/: SELECTED_FEATURES.md
rings/plan-impl/: plan-impl.rings.toml
rings/plan-impl/prompts/: wave-1.md  wave-2.md  wave-3.md  wave-4.md  wave-5.md
rings/plan-prioritize/: plan-prioritize.rings.toml
rings/plan-prioritize/prompts/: prioritize.md
rings/plan-review/: plan-review.rings.toml
rings/plan-review/prompts/: review.md  synthesize.md
rings/plan-review/queue/: PLAN_DRAFTS.md
rings/prioritize/: prioritize.rings.toml
rings/prioritize/activities/: PRIORITIZED_FEATURES.md
rings/prioritize/prompts/: prioritize.md
rings/process-bugs/: process-bugs.rings.toml
rings/process-bugs/activities/: BUGS_RESOLVED.md
rings/process-bugs/prompts/: fix.md  reproduce.md  triage.md  verify.md
rings/process-bugs/queue/: BUG_REPORT.md
rings/process-ideas/: process-ideas.rings.toml
rings/process-ideas/activities/: IDEAS_PROCESSED.md
rings/process-ideas/prompts/: review.md  select.md  write.md
rings/process-ideas/queue/: IDEAS.md
rings/process-ideas/wip/: idea-working.md
rings/process-improvements/: process-improvements.rings.toml
rings/process-improvements/prompts/: implement.md  plan.md  select.md  verify.md
specs/: feature_inventory.md  index.md  mvp.md  overview.md
specs/cli/: commands-and-flags.md  completion-and-manpage.md  distribution.md  exit-codes.md  index.md  inspect-command.md
specs/execution/: completion-detection.md  engine.md  error-handling.md  executor-integration.md  index.md  output-parsing.md  prompt-templating.md  rate-limiting.md
specs/observability/: audit-logs.md  cost-tracking.md  file-lineage.md  index.md  opentelemetry.md  runtime-output.md
specs/state/: cancellation-resume.md  configuration.md  index.md  run-ancestry.md
specs/workflow/: cycle-model.md  index.md  phase-contracts.md  workflow-file-format.md
src/: audit.rs  backoff.rs  cancel.rs  cli.rs  completion.rs  config.rs  contracts.rs  cost.rs  display.rs  dry_run.rs  duration.rs  engine.rs  error_classify.rs  events.rs  executor.rs  gate.rs  inspect.rs  lib.rs  list.rs  lock.rs  main.rs  manifest.rs  state.rs  style.rs  telemetry.rs  template.rs  verbose.rs  workflow.rs
tests/: cli_args.rs  completion_check.rs  completion_phase_restriction.rs  cost_parse.rs  cost_spike.rs  cycle_gate.rs  cycle_schedule.rs  dry_run.rs  engine_integration.rs  engine_timeout_cancel.rs  executor.rs  executor_wait_error.rs  gate_logging.rs  include_dir.rs  inspect.rs  jsonl_delay_budget_events.rs  jsonl_lifecycle_events.rs  jsonl_output_separation.rs  jsonl_per_run_events.rs  list_runs.rs  man_page.rs  no_change_streak.rs  phase_contracts.rs  phase_gate.rs  schema_migration.rs  signal_modes.rs  snapshot_storage_warning.rs  stale_lock_detection.rs  startup_unknown_var_warning.rs  state_recovery.rs  state_roundtrip.rs  template.rs  token_tracking.rs  unknown_vars.rs  workflow_change_detection.rs  workflow_parse.rs
tests/fixtures/: missing_signal.rings.toml  valid.rings.toml
(+1 files in other folders)
