[package]
name = "rings"
version = "0.1.21"
edition = "2021"

[[bin]]
name = "rings"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
regex = "1"
which = "6"
lazy_static = "1.4"
tempfile = "3"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
sha2 = "0.10"
globset = "0.4"
walkdir = "2"
hex = "0.4"
owo-colors = "4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[features]
testing = []

[dev-dependencies]

[[test]]
name = "engine_integration"
path = "tests/engine_integration.rs"
required-features = ["testing"]

[[test]]
name = "token_tracking"
path = "tests/token_tracking.rs"
required-features = ["testing"]
