[package]
name = "rings"
version = "0.1.283"
edition = "2021"
description = "Iterative AI workflows for Claude Code — run Claude in a loop with cost tracking, safe cancellation, and resumable runs"
license = "Apache-2.0"
repository = "https://github.com/pinecone-io/rings"
keywords = ["claude", "ai", "workflow", "automation", "llm"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "specs/",
    "tests/fixtures/",
    ".github/",
    "*.rings.toml",
    "REVIEW.md",
    "TODO.md",
    "queues/",
]

[[bin]]
name = "rings"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
regex = "1"
which = "6"
lazy_static = "1.4"
tempfile = "3"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
sha2 = "0.10"
globset = "0.4"
walkdir = "2"
hex = "0.4"
owo-colors = "4"
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-blocking-client"], optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"

[features]
default = ["otel"]
testing = []
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
clap_mangen = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[[test]]
name = "engine_integration"
path = "tests/engine_integration.rs"
required-features = ["testing"]

[[test]]
name = "token_tracking"
path = "tests/token_tracking.rs"
required-features = ["testing"]
